style.css
#logo {
	display: block;
	margin: 200px auto 0;
}

.left-list {
	grid-area: left;
	display: flex;
}

.right-list {
	grid-area: right;
	display: flex;
	justify-content: flex-end;
	padding-right: 8px;
}

#top-nav,
#bottom-nav {
	display: grid;
	grid-template-columns: repeat(2, auto);
	grid-template-areas: "left right";
	height: 32px;
}

nav ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

nav ul li {
	align-self: center;
}

nav ul li a {
	text-decoration: none;
	font-family: Arial, Helvetica, sans-serif;
	color: #000;
	opacity: 0.75;
	margin: 8px;
}

nav ul li a:hover {
	text-decoration: underline;
}
#top-nav {
	margin-top: 16px;
}

#top-nav ul li a {
	font-size: 13px;
}

#top-nav .sign-in {
	padding: 6px 12px;
	font-weight: bold;
	color: white;
	border: 1px solid #4285f4;
	border-radius: 2px;
	background-color: #4285f4;
	background: -webkit-linear-gradient(top, #4387fd, #4683ea);
}

#bottom-nav ul li a {
	color: #222222;
	font-size: 16px;
}

#bottom-nav ul li a:active {
	color: #dd4b39;
}

footer {
	width: 100%;
	height: 35px;
	position: fixed;
	bottom: 0;
	padding: 8px 0;
	background-color: #f2f2f2;
	border-top: 1px solid #e4e4e4;
}

form {
	text-align: center;
	position: relative;
	margin: 0 auto;
	margin-top: 24px;
	width: 500px;
}

#input-container {
	background: #ffffff;
	border: 1px solid #dfe1e5;
	border-radius: 24px;
	height: 44px;
	display: flex;
	padding: 0 16px;
}

.input-icon {
	display: flex;
	align-items: center;
}

.input-icon.search-icon {
	margin-right: 12px;
}

.input-icon.voice-icon {
	margin-left: 12px;
}

#search-field {
	margin: 0 auto;
	width: 100%;
	border: none;
	box-shadow: none;
	font-size: 16px;
}

.buttons input[type="submit"] {
	padding: 0 16px;
	margin: 12px 8px 0;
	font-size: 14px;
	color: #5f636b;
	line-height: 27px;
	height: 36px;
	background-color: linear-gradient(top, #f5f5f5, #f1f1f1);
	background-color: #f5f5f5;
	border: 1px solid #f2f2f2;
	border-radius: 4px;
}

.buttons input[type="submit"]:hover {
	color: #000;
	background-color: linear-gradient(top, #f8f8f8, #f1f1f1);
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
	border: 1px solid #c6c6c6;
	cursor: pointer;
}

